Harden file handling and crypto paths